--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ strands-agents>=1.0.0
 strands-agents-tools>=0.2.0
 
 # YAML parsing
-pyyaml>=6.0
+strictyaml>=1.0.0
 
 # Streamlit demo (optional)
 streamlit>=1.28.0
